@@ -2,6 +2,8 @@
 Fix in --only-preprocess-for-ocamlyacc mode: avoid printing newline characters
 inside a %type declaration, as this is forbidden by ocamlyacc. (Reported by
 Kenji Maillard.)
+Fix in --only-preprocess-for-ocamlyacc mode: avoid variable capture caused by
+ocamlyacc internally translating $i to _i. (Reported by Kenji Maillard.)
 
 2016/09/01:
 New command line switch --only-preprocess-for-ocamlyacc, supposed to print the
